# core

./: .gitignore  config.env  pyproject.toml  requirements.txt  setup.cfg
logs/: README.md
poetry_scripts/: django.py
src/: manage.py
src/ai_api/constants/: const.py  system.py
src/aicore/: asgi.py  settings.py  urls.py  wsgi.py
src/aicore/db_backend/mysql/: base.py
src/aicore/settings/: __init__.py
src/aicore/settings/configs/: cache.py  databases.py  general_settings.py  installed_apps.py  languages.py  log.py  middlewares.py  rest_framework.py  templates.py
src/aicore/settings/configs/companies/: spotify.py
src/aicore/settings/environments/: development.py  production.py
